# cryptagram

./: .gitignore  .gitmodules  DEVELOPER.md  LICENSE  Makefile  README  README.md  code.js  index.html  main.py  package.json  proxy.php  setup.py  status.py  style.css  tksb.py
.github/workflows/: fixtures-smoke.yml
AddressBookSpy/: HashValue.m
AddressBookSpy/AddressBookSpy/: ABSEngine.m  ABSViewController.m  PRGAppDelegate.h  PRGAppDelegate.m  PRGEngine.h  PRGUtilities.h  PRGViewController.m  QSStrings.h  QSStrings.m
AddressBookSpy/AddressBookSpy.xcodeproj/: project.pbxproj
AddressBookSpy/Cryptogram.xcodeproj/: project.pbxproj
Cryptogram/AddressBookSpy/: PRGUtilities.m  PRGViewController.m
Cryptogram/Cryptogram/: PRGAppDelegate.m  PRGEngine.m  PRGViewController.h  PRGViewController.m  QSFileManager.m
Cryptogram/Cryptogram.xcodeproj/: project.pbxproj
ampl/: Bits.py  GenerateJpeg.py  Makefile  dakota.mod  dakota.sol  jpeg-orig.mod  jpeg.mod  jpeg.mod.back  temp.mod  test.mod  test.sh
android/: .gitignore
android/CryptagramAndroid/: .classpath  AndroidManifest.xml  project.properties
android/CryptagramTests/: .classpath  AndroidManifest.xml
android/CryptogramAndroid/: .classpath  AndroidManifest.xml
chrome-extension/: background.js  cryptogram.icns  cryptogram.js  popup.css  popup.html  popup.js
chrome-extension/basic/: background.js  seemenot.js
chrome-extension/fb/: README  README.md  background.js  binaryajax.js  cryptogram.js  manifest.json  popup.css  popup.html  popup.js  seemenot.js
chrome-extension/pyjamas-fb/: ImageCoder.py  Makefile  Menus.py  README.md  SeeMeNot.py  contentscript.js  post-process-pyjsbuild-html.py  util.py
closure/: Makefile  README.md  build_demo.sh  build_encoder.sh  build_extension.sh  build_extension_no_debug.sh  cryptagram-background-config.js  cryptagram-content-config.js  cryptagram-content-dev-config.js  cryptagram-content-no-debug-config.js  cryptagram-demo-config.js  cryptagram-demo-dev-config.js  cryptagram-encoder-config.js  cryptogram-background-config.js  cryptogram-compiled.js  cryptogram-config.js  cryptogram-content-config.js  cryptogram-content-no-debug-config.js  cryptogram-demo-config.js  index-compiled.html  index.html  serve_demo.sh  serve_dev_extension.sh  serve_encoder.sh  style.css
closure/extension/: background.js  cryptogram-background.js  cryptogram-compiled.js  cryptogram-content.js  manifest.json
closure/externs/: MD5.js  chrome_extensions.js  downloadify.js  jpegmeta.js  sjcl-externs.js
closure/gss/: demo.gss  encoder.gss  extension.gss  style.gss
closure/soy/: demo.soy  experiment.soy  extension.soy  status.soy
closure/src/: downloadify-externs.js  index.soy  style.gss  swfobject-externs.js
core-rust/: Cargo.toml
core-rust/src/: bacchant.rs  constants.rs  lib.rs
desktop/: Cipher.py  Codec.py  CryptogramGUI.py  ECCoder.py  Encryptor.py  ImageCoder.py  Makefile  NewImage.py  NewImageDimensions.py  Orientation.py  Orientation_test.py  README  README.md  SeeMeNot.py  SymbolShape.py  SymbolShape_test.py  TODO  aes.py  code.py  codec.py  cryptogram.py  filedialog.py  icon.icns  main.py  pixeling.py  rs.py  sandbox.py  setup.py  util.py  util_test.py
desktop/Cipher/: PyCryptoCipher.py  PyV8Cipher.py
desktop/static/: application.css  close-window.js  jquery.jstree.js  progress_bar.js  treestyle.css  ui-progress-bar.css  validate-password.js
desktop/templates/: base.html  dnd.html  encrypting.html  exit.html  file_selection.html  index.html
docs/: fixture-inventory.md  migration-plan.md  phase0-architecture.md  threat-model.md
downloadify/: build_downloadify.sh
downloadify/media/: downloadify.swf
experimental/: ColorSpace.cc  ColorSpace.h  ErrorsPerQuality.py  Makefile  count.sh  dct.py  kmeans.py  main.cc  nearest.py  quantization.py  util.py
experimental/lib/: .gitignore  Makefile  Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac  cryptogram-beaker.sh  experiment.cc  experiment.h  jpeg_codec.cc  jpeg_codec.h  jpeg_file.cc  jpeg_file.h  main.cc  mak.bak  package-for-beakers.sh  util.h
experimental/lib/include/: CryptogramCodec.h
experimental/lib/include/.svn/: all-wcprops  entries
experimental/lib/include/gtest/.svn/: all-wcprops  entries
experimental/lib/include/gtest/internal/.svn/: all-wcprops  entries
experimental/lib/m4/.svn/: entries
experimental/lib/samples/.svn/: entries
experimental/lib/scripts/.svn/: all-wcprops  entries
experimental/lib/scripts/test/.svn/: entries
experimental/lib/src/: Coder.cc  Coder.h  Makefile.am  Makefile.in  SjclCryptoBridge.cc  SjclCryptoBridge.h  aesthete.cc  aesthete.h  aesthete_thread.cc  aesthete_thread.h  aesthete_thread_runner.cc  array.cc  array.h  array_test.cc  base64.cc  base64.h  base64_unittest.cc  basictypes.h  config.h  crypto.cc  crypto.h  crypto_test.cc  discretizations.cc  discretizations.h  ecc_experiment.cc  ecc_experiment.h  ecc_experiment_main.cc  ecc_image.h  ecc_message.cc  ecc_message.h  ecc_thread.cc  ecc_thread.h  experiment.cc  experiment.h  experiment_config.h  generate_aesthete_matrices.cc  hash_tables.h  in_memory_experiment.cc  jpeg_benchmark.cc  jpeg_benchmark.py  (+26 more)
experimental/lib/src/base/: Makefile.am  Makefile.in  stack_container.h
experimental/lib/src/base/threading/: thread.h
experimental/lib/src/cryptopp/: Makefile  Makefile.in  cryptlib.cpp  cryptlib.h  eccrypto.cpp  make.bak  misc.h
experimental/lib/src/reed_solomon/: Makefile  Makefile.am  Makefile.in  decode_rs.c  list.h  reed_solomon.c  rs_codec.cc  rs_codec.h  rs_main.cc  rslib.h
experimental/lib/test/.svn/: all-wcprops  entries
experimental/resize_test/: chop.sed  experiment.sh  pivot.awk  (+4 more)
ios/: sjcl.js
js_experiment/: canvas_test.html
lib/: Makefile  README  codec.h  cryptogram.cc  cryptogram.h  cryptogram_test.cc  image.h
site/: code.js  index.html  style.css  terms.html
site-encoder/: crossdomain.xml  cryptagram-compiled.js  encoder.js  experiment.html  index.html  style.css
testdata/: README.md  fixtures-manifest.csv
tests/: README.md
tornado/: README.md  www.py
(+229 files in other folders)
