[package]
name = "cryptagram-core"
version = "0.1.0"
edition = "2021"
authors = ["Matt Tierney"]
description = "Shared Rust core for Cryptagram (Wasm-ready)"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
ring = "0.17"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small wasm size
opt-level = "s"
lto = true
