noinst_LIBRARIES = libstringprintf.a
libstringprintf_a_SOURCES = stringprintf.h stringprintf.cc

# noinst_LIBRARIES = threading/libthread.a libmessage_loop.a

# threading_libthread_a_SOURCES = threading/thread.h threading/thread.cc
# threading_libthread_a_CPPFLAGS = -I..

# libmessage_loop_a_SOURCES = message_loop.h message_loop.cc
# libmessage_loop_a_CPPFLAGS = -I..
